--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
 
         <input type="text" placeholder="Digite o seu nome">
 
-        <div onclick="nome()">Entrar</div>
+        <button class="botao" onclick="digitandoNome()">Entrar</button>
+    </div>
+
+    <div class="menu">
+        <div class="menulateral">
+            
+        </div>
     </div>
 
     <div class="topo">
         <img src="imagens/logo1.png" >
-        <ion-icon name="people"></ion-icon>
+        
+        <ion-icon name="people" onclick="menuLateral()"></ion-icon>
     </div>
 
     <div class="conteudo">
@@ -27,7 +34,7 @@
     </div>
 
     <div class="digitar">
-        <input type="text" placeholder="Digite sua mensagem">
+        <input type="text" placeholder="Escreva aqui...">
 
         <ion-icon name="send-outline" onclick="enviarMensagem()"></ion-icon>
     </div>
