colocando os usuarios online e checando o status do usuario corretamente

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     </div>
 
     <div class="menu">
+        <div class="voltar" onclick="voltar()"></div>
         <div class="menulateral">
-            
+           
         </div>
     </div>
 
