--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button class="botao" onclick="digitandoNome()">Entrar</button>
     </div>
 
-    <div class="menu">
+    <div class="menu escondida">
         <div class="voltar" onclick="voltar()"></div>
         <div class="menulateral">
            
