--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        
     </div>
 
-    <div class="digitar">
+    <div class="digitar" onkeypress="enviarEnter(event)">
         <input type="text" placeholder="Escreva aqui...">
 
         <ion-icon name="send-outline" onclick="enviarMensagem()"></ion-icon>
