Tela de loading

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="inicial">
+    <div class="inicial nomeando">
         <img src="imagens/logo2.png" >
 
         <input type="text" placeholder="Digite o seu nome">
 
         <button class="botao" onclick="digitandoNome()">Entrar</button>
+        <img src="imagens/Radio.gif">
+        <p><strong>Carregando...</strong></p>
+        <p class="erro"></p>
     </div>
 
     <div class="menu escondida">
